<resources>
    <string name="app_name">Weather Application</string>
    <string name="title">Weather</string>
    <string name="conditions">Conditions</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">wind</string>
    <string name="speed">Speed</string>
    <string name="information">Information</string>
    <string name="last_update">Last update</string>
    <string name="temps">No information</string>
    <string name="tempsDescription">No information</string>
    <string name="temperature_value">No information</string>
    <string name="pressure_value">No information</string>
    <string name="humidity_value">No information</string>
    <string name="speed_value">No information</string>
    <string name="lasUpdate_value">Comming soon</string>
    <string name="date">No information</string>
</resources>
