<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.iut_amiens.weatherapplication.MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/title"
        android:text="@string/title"
        android:textSize="14sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"

        android:layout_width="50dp"
        android:layout_height="50dp"

        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"

        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@android:color/darker_gray" />

    <TextView
        android:id="@+id/temps"
        android:text="@string/temps"
        android:textSize="14sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="8dp"

        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


    <TextView
        android:id="@+id/tempsDescription"
        android:text="@string/tempsDescription"
        android:textSize="14sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="8dp"

        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView" />

    <TextView
        android:id="@+id/conditions"
        android:text="@string/conditions"
        android:textSize="14sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"

        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/temperature"
        android:text="@string/temperature"
        android:textSize="14sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"

        app:layout_constraintStart_toStartOf="@+id/conditions"
        app:layout_constraintTop_toBottomOf="@+id/conditions" />

    <TextView
        android:id="@+id/temperature_value"
        android:text="@string/temperature_value"
        android:textSize="14sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="40dp"

        app:layout_constraintStart_toEndOf="@+id/temperature"
        app:layout_constraintTop_toTopOf="@+id/temperature" />

    <TextView
        android:id="@+id/pressure"
        android:text="@string/pressure"
        android:textSize="14sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"

        app:layout_constraintStart_toStartOf="@+id/temperature"
        app:layout_constraintTop_toBottomOf="@+id/temperature"/>

    <TextView
        android:id="@+id/pressure_value"
        android:text="@string/pressure_value"
        android:textSize="14sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@+id/temperature_value"
        app:layout_constraintTop_toTopOf="@+id/pressure" />

    <TextView
        android:id="@+id/humidity"
        android:text="@string/humidity"
        android:textSize="14sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"

        app:layout_constraintStart_toStartOf="@+id/pressure"
        app:layout_constraintTop_toBottomOf="@+id/pressure"/>

    <TextView
        android:id="@+id/humidity_value"
        android:text="@string/humidity_value"
        android:textSize="14sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@+id/temperature_value"
        app:layout_constraintTop_toTopOf="@+id/humidity" />

    <TextView
        android:id="@+id/wind"
        android:text="@string/wind"
        android:textSize="14sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"

        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/humidity" />

    <TextView
        android:id="@+id/speed"
        android:text="@string/speed"
        android:textSize="14sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"

        app:layout_constraintStart_toStartOf="@+id/wind"
        app:layout_constraintTop_toBottomOf="@+id/wind" />

    <TextView
        android:id="@+id/speed_value"
        android:text="@string/speed_value"
        android:textSize="14sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@+id/temperature_value"
        app:layout_constraintTop_toTopOf="@+id/speed" />

    <TextView
        android:id="@+id/information"
        android:text="@string/information"
        android:textSize="14sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"

        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/speed" />

    <TextView
        android:id="@+id/lastUpdate"
        android:text="@string/last_update"
        android:textSize="14sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"

        app:layout_constraintStart_toStartOf="@+id/information"
        app:layout_constraintTop_toBottomOf="@+id/information" />

    <TextView
        android:id="@+id/lastUpdate_value"
        android:text="@string/lasUpdate_value"
        android:textSize="14sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@+id/temperature_value"
        app:layout_constraintTop_toTopOf="@+id/lastUpdate" />

    <Button
        android:id="@+id/button"
        android:layout_width="70sp"
        android:layout_height="70sp"

        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#fff"

        android:layout_marginBottom="30dp"
        android:layout_marginRight="30dp"

        android:text="List"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
